Fixed SonarLint issues